--- a/src/index.html
+++ b/src/index.html
@@ -5,4 +5,17 @@
 		<link href="https://user-images.githubusercontent.com/98713994/167147490-e86e4ea6-5fef-47b2-8d89-3177c29c9cac.svg" rel="favicon" />
 		<meta charset="utf-8">
 	</head>
+	<body>
+		<div id="header">
+			<div id="searchbox">
+				<input type="text" id="searchinput">
+				<img id="searchbutton" src="../assets/icons/search.svg">
+			</div>
+			<div id="toolbar">
+			</div>
+			<div id="tabbar">
+			</div>
+		</div>
+		<iframe id="webview"></iframe>
+	</body>
 </html>
