--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>overcharge</title>
 		<link href="https://user-images.githubusercontent.com/98713994/167147490-e86e4ea6-5fef-47b2-8d89-3177c29c9cac.svg" rel="favicon" />
+		<link href="./css/index.css" rel="stylesheet" />
 		<meta charset="utf-8">
 	</head>
 	<body>
