:art: Rearrange layouts

--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,15 @@
 <html lang="en">
 	<head>
 		<title>overcharge</title>
-		<link href="https://user-images.githubusercontent.com/98713994/167147490-e86e4ea6-5fef-47b2-8d89-3177c29c9cac.svg" rel="favicon" />
+		<link href="./assets/favicon.ico" rel="favicon" />
 		<link href="./css/index.css" rel="stylesheet" />
 		<meta charset="utf-8">
 	</head>
 	<body>
 		<div id="header">
-			<div id="searchbox">
-				<input type="text" id="searchinput">
-				<img id="searchbutton" src="../assets/icons/search.svg">
-			</div>
-			<div id="toolbar">
-			</div>
-			<div id="tabbar">
-			</div>
+			<img src="assets/favicon.ico" class="header?icon" id="homebutton">
+			<input type="text" id="searchinput">
+			<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
 		</div>
 		<iframe id="webview"></iframe>
 	</body>
