:lipstick: Fixed typo

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<img src="assets/favicon.ico" class="header?icon" id="homebutton">
+			<img src="assets/favicon.ico" class="headerlicon" id="homebutton">
 			<input type="text" id="searchinput">
 			<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
 		</div>
