:bug: Corrected a bug

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
 	</head>
 	<body>
 		<div id="header">
-			<img src="assets/favicon.ico" class="header-icon" id="homebutton">
-			<input type="text" id="searchinput">
-			<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
+			<div>
+				<img src="assets/favicon.ico" class="header-icon" id="homebutton">
+				<input type="text" id="searchinput">
+				<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
+			</div>
 		</div>
 		<iframe id="webview"></iframe>
 	</body>
