:zap: Clean code

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-		<div id="header">
+		<header id="header">
 			<img src="assets/favicon.ico" class="header-icon" id="homebutton">
 			<input type="text" id="searchinput">
 			<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
-		</div>
+		</header>
 		<iframe id="webview"></iframe>
 	</body>
 </html>
