--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 			<img src="assets/favicon.ico" class="header-icon" id="homebutton">
 			<input type="text" id="searchinput">
 			<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
+			<img id="backward" class="header-icon" src="assets/icons/backward.svg">
+			<img id="forward" class="header-icon" src="assets/icons/forward.svg">
 		</header>
 		<iframe class="window" name="webview" id="webview"></iframe>
 		<div class="window" id="history" hidden>
