--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header id="header">
-			<img src="assets/favicon.ico" class="header-icon" id="homebutton">
+			<img src="assets/icons/home.svg" class="header-icon" id="homebutton">
 			<input type="text" id="searchinput">
 			<img id="searchbutton" class="header-icon" src="assets/icons/search.svg">
 			<img id="backward" class="header-icon" src="assets/icons/backward.svg">
